# licitum

./: .gitignore  CLAUDE.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_m3.py  0002_add_procesando_estado.py  0003_add_extraction_error.py  0004_campos_opcionales.py  0005_nuevos_campos_m3.py  0006_pdf_url_nullable.py  0007_licitaciones.py  0008_licitaciones_filtros.py  0009_score_afinidad.py  0010_empresas_relic.py  0011_empresa_extendida.py  0012_pliego_analisis_ia.py  0013_tracker.py  0014_sobre_a.py  0015_pscp_intel.py  0016_pscp_drop_unique.py  0017_pscp_mviews.py  0018_empresa_recursos.py  0019_pscp_baja_bounds.py  0020_score_empresa.py  0021_mviews_dir3.py  0022_empresa_provincia_codigo.py  0023_pliego_solicitud.py  0024_unaccent.py  0025_licitacion_favorita.py  0026_sobre_a_presentaciones.py  0027_oferta_economica.py  0028_user_empresa.py
backend/app/: config.py  main.py
backend/app/core/: auth.py  auth_middleware.py  celery_app.py  cpv_rolece.py  enums.py
backend/app/db/: base.py  session.py
backend/app/intel/: __init__.py
backend/app/models/: __init__.py  empresa.py  (+20 more)
backend/scripts/: catchup_pscp_incremental.py  recalc_demo_scores.py  seed_demo_empresa.py  seed_demo_user.py  smoke_recomendar_baja.py  test_scoring_pertinente.py
backend/workers/: extraccion_pdf.py  extraccion_pliego.py  ingesta_placsp.py  ingesta_pscp.py  intel_pliego_dispatch.py  intel_pscp.py  intel_scores.py  recalcular_semaforos.py  sync_relic.py
(+212 files in other folders)
