[project]
name = "licitum-backend"
version = "0.1.0"
description = "Licitum backend — FastAPI + PostgreSQL (Supabase) + pgvector"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "python-dotenv>=1.0",
    "aioboto3>=13",
    "python-multipart>=0.0.20",
    "celery>=5.4",
    "redis>=5",
    "httpx>=0.28",
    "anthropic>=0.40",
    "pdfplumber>=0.11",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17",
    "python-docx>=1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
